<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:style="http://schemas.android.com/tools"
    android:layout_marginBottom="8dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/restaurantImage"
            android:src="@drawable/img"
            android:scaleType="centerCrop"
            android:layout_marginEnd="8dp"
            android:layout_width="64dp"
            android:layout_height="64dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/restaurantName"
                android:text="@string/restaurantName"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/restaurantTags"
                    android:text="@string/tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_height="1dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location" />

            </LinearLayout>
            <RatingBar
                android:id="@+id/restaurantRating"
                style="?android:attr/ratingBarStyleSmall"
                android:numStars="5"
                android:stepSize="0.5"
                android:rating="4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/deleteBtn"
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BtnStyle"
            android:visibility="invisible"
            android:minWidth="64dp"
            android:minHeight="36dp"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>